--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <article id="About">
         <img src="Zero_Two.webp" alt="picture">
     </p> Hi! My name is Mariel Antonette U. Montero,
-     an IT Student in Saint Michael College Of Caraga.</p>
+     an IT Student in Saint Michaael College Of Caraga.</p>
     </article>
 
     <article id="My Projects">
